# cpp-codebase-utils

./: CMakeLists.txt  LICENSE.md  README.md
include/utils/: metadata.hpp  runtime.hpp
src/utils/: metadata.cpp  runtime.cpp
